#124 Register > Only show red borders if user failed to enter the value

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
@@ -112,7 +112,7 @@
                                 // Sadly this does mean all inputs are considered to be
                                 // invalid from page load & bordered.
                                 &:invalid {
-                                        border-color: $warn;
+                                        //border-color: $warn;
                                 }
 
                                 &:valid {
