#124 Register > Only show red borders if user failed to enter the value

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_registration.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_registration.scss
@@ -136,3 +136,18 @@ body.register {
                 }
         }
 }
+
+
+#buddypress #signup-form {
+    input.error {
+            border-color: $warn;
+    }
+    
+    input:focus {
+        border-color: $form-border-focus;
+    }
+    
+    label.error {
+            display: none !important;
+    }
+}
