2px width on validation error, for clarity

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_registration.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_registration.scss
@@ -141,6 +141,7 @@ body.register {
 #buddypress #signup-form {
     input.error {
             border-color: $warn;
+            border-width: 2px;
     }
     
     input:focus {
