--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -2056,6 +2056,7 @@ body.register #page #primary .entry-header {
 
 #buddypress #signup-form input.error {
   border-color: #b71717;
+  border-width: 2px;
 }
 
 #buddypress #signup-form input:focus {
