--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -5144,6 +5144,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   }
   .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) {
     background: #eaeaea;
+    margin: 0;
     width: auto;
   }
   .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li {
